<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.view.MainActivity">

    <TextView
            android:id="@+id/textView_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/view_margin"
            android:gravity="bottom"
            android:text="@string/app_name"
            android:textSize="@dimen/font_big"
            app:layout_constraintBottom_toTopOf="@id/textView_subLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textView_subLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/label_author"
            android:textSize="@dimen/font_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_label"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_enter" android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin" android:layout_marginStart="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:text="@string/button_enter" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>