<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_marginStart="@dimen/view_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_title" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:imeOptions="actionNext"
                android:inputType="text" android:singleLine="true"
                android:hint="@string/hint_title"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_marginStart="@dimen/view_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_title">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_description" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/hint_description"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create" android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_margin" android:layout_marginEnd="@dimen/view_margin"
            android:layout_marginStart="@dimen/view_margin" android:text="@string/button_create"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>